@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - improved travis, badges
 
 0.018  2014-10-19 22:45:38 CEST
        - retry release
